--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,22 +1,20 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.burst": "1.8.18",
-    "com.unity.cinemachine": "3.1.2",
-    "com.unity.collections": "2.5.1",
+    "com.unity.burst": "1.8.19",
+    "com.unity.collections": "2.5.3",
     "com.unity.editorcoroutines": "1.0.0",
-    "com.unity.ide.rider": "3.0.31",
-    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ide.rider": "3.0.35",
+    "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.mathematics": "1.3.2",
-    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.nuget.mono-cecil": "1.11.5",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
-    "com.unity.package-validation-suite": "0.75.0-preview",
     "com.unity.postprocessing": "3.4.0",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.searcher": "4.9.3",
     "com.unity.splines": "2.6.1",
-    "com.unity.test-framework": "1.4.5",
-    "com.unity.timeline": "1.8.7",
+    "com.unity.test-framework": "1.4.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualeffectgraph": "17.0.3",
     "jp.keijiro.klak.spout": "2.0.3",
